--- a/facts/facts.tex
+++ b/facts/facts.tex
@@ -7,7 +7,7 @@
 \renewcommand*{\theenumiii}{\theenumii.\arabic{enumiii}}
 
 \newcommand{\E}{\varepsilon}
-
+\newcommand{\Rl}{\mathbb{R}}
 
 \title{Functional Analysis Facts}
 \author{Sam Fleischer}
@@ -18,102 +18,215 @@
     \section{A Short Introduction to $L^p$ Spaces}
     \subsection{Three Pillars of Analysis}
     \begin{enumerate}
-        \item \textbf{Monotone Convergence Theorem} - If a sequence of non-negative functions is increasing, we can pull the limit through an integral. $$\lim_k \int f_k = \int \lim_k f_k.$$
-        \item \textbf{Fatou's Lemma} - For a sequence of non-negative functions, the integral of the lim~inf is less than or equal to the lim~inf of the integral. $$\int \liminf_k f_k \leq \liminf_k \int f_k.$$
-        \begin{enumerate}
-            \item Example: $f_k = k\mathcal{X}_{\qty(0, \frac{1}{k})}$.  $\int_0^1 f_k = 1$ for all $k \implies \liminf_k \int_0^1 f_k = \liminf_k 1 = 1$.  But since $f_k \rightarrow 0$ pointwise a.e., $\liminf_k f_k(x) = 0 \implies \int_0^1 \liminf_k f(x) \dd x = 0$.
-        \end{enumerate}
-        \item \textbf{Dominated Convergence Theorem} - If a sequence converges pointwise almost everywhere and is dominated, then it converges in norm to its pointwise limit.  $$\lim_k\int f_k = \int \lim_k f_k = \int f.$$  $$\lim_k\norm{f_k - f}_1 = 0.$$
+        \item
+            \textbf{Monotone Convergence Theorem} - If a sequence of non-negative functions is increasing, we can pull the limit through an integral. $$\lim_k \int f_k = \int \lim_k f_k.$$
+        \item
+            \textbf{Fatou's Lemma} - For a sequence of non-negative functions, the integral of the lim~inf is less than or equal to the lim~inf of the integral. $$\int \liminf_k f_k \leq \liminf_k \int f_k.$$
+            \begin{enumerate}
+                \item
+                    Example: $f_k = k\mathcal{X}_{\qty(0, \frac{1}{k})}$.  $\int_0^1 f_k = 1$ for all $k \implies \liminf_k \int_0^1 f_k = \liminf_k 1 = 1$.  But since $f_k \rightarrow 0$ pointwise a.e., $\liminf_k f_k(x) = 0 \implies \int_0^1 \liminf_k f(x) \dd x = 0$.
+            \end{enumerate}
+        \item
+            \textbf{Dominated Convergence Theorem} - If a sequence converges pointwise almost everywhere and is dominated, then it converges in norm to its pointwise limit.  $$\lim_k\int f_k = \int \lim_k f_k = \int f.$$  $$\lim_k\norm{f_k - f}_1 = 0.$$
     \end{enumerate}
 
     \subsection{Integrals over Product Spaces}
     \begin{enumerate}
-        \item \textbf{Fubini's Theorem} - If a function is integrable on a product space, then the integral over the product space is equal to both iterated integrals.
-        \begin{enumerate}
-            \item Iterated integrals may exist \emph{without} the existence of the integral over the product space.
-        \end{enumerate}
-        \item \textbf{Semi-converse of Fubini's Theorem} - If an iterated integral exists of the \emph{absolute value} of a function on a prodct space, then the integral of the product space is equal to both iterated integrals.
-        \item \textbf{Tonelli's Theorem} - If a function is non-negative and measurable on a product space, then the integral over the product space is equal to both iterated integrals.
+        \item
+            \textbf{Fubini's Theorem} - If a function is integrable on a product space, then the integral over the product space is equal to both iterated integrals.
+            \begin{enumerate}
+                \item
+                    Iterated integrals may exist \emph{without} the existence of the integral over the product space.
+            \end{enumerate}
+        \item
+            \textbf{Semi-converse of Fubini's Theorem} - If an iterated integral exists of the \emph{absolute value} of a function on a prodct space, then the integral of the product space is equal to both iterated integrals.
+        \item
+            \textbf{Tonelli's Theorem} - If a function is non-negative and measurable on a product space, then the integral over the product space is equal to both iterated integrals.
     \end{enumerate}
 
     \subsection{$L^p$ Spaces}
     \begin{enumerate}
-        \item Convexity is a thing.  $$x^\lambda \leq (1 - \lambda) + \lambda x \qquad \forall \lambda \in (0,1).$$ $$a^\lambda b^{1-\lambda} \leq \lambda a + (1 - \lambda)b \qquad \forall \lambda \in (0,1), \qquad \forall a,b \geq 0.$$
-        \item \textbf{H\"{o}lder's Inequality} - For conjugate exponents $p$ and $q$, the $1$-norm of a product of $L^p$ and $L^q$ functions is finite, and the $1$-norm of the product is less than or equal to the product of the norms of the original functions.  $$\norm{fg}_1 \leq \norm{f}_p\norm{g}_q$$.
-        \item \textbf{Interpolation Inequality} - For $1 \leq r \leq s \leq t \leq \infty$, if $u$ is in $L^r$ and $L^t$, then $u$ is in $L^s$ and the $s$-norm is less than of equal to the product of the $r$- and $t$-norms raised to the appropriate power. $$\norm{u}_s \leq \norm{u}_r^a \norm{u}_t^{1-a}\qquad \text{where } \frac{1}{s} = \frac{a}{r} + \frac{1-a}{t}.$$ $$L^r \cap L^t \subset L^s.$$
-        \item \textbf{Minkowski's Inequality} - For functions in $L^p$, the norm of their sum is less than or equal to the sum of their norms. $$\norm{f + g}_p \leq \norm{f}_p + \norm{g}_p.$$
-        \item $L^p$ is a normed linear space.
-        \item $L^p$ is a Banach Space (a complete (Cauchy sequences converge) normed linear space).  Steps of the proof:
-        \begin{enumerate}
-            \item Construct the Cauchy sequence.
-            \item Construct a monotone sequence from the Cauchy sequence.
-            \item Use Mikowski's Inequality and Triangle Inequality to  show the sequence is uniformly bounded.
-            \item Show pointwise convergence of Cauchy sequence using Triangle Inequality.
-            \item Use dominated Convergence Theorem to show norm convergence of Cauchy sequence.
-        \end{enumerate}
-        \item \textbf{Pointwise convergence implies a double implication} - If a sequence of functions converge pointwise, then their norms converge if and only if they converge in norm. $$f_k \rightarrow f \text{ pointwise}\ \ \implies\ \ \Bigg[\norm{f_k - f}_p \rightarrow 0\ \ \iff\ \ \norm{f_k}_p \rightarrow \norm{f}_p\Bigg].$$
-        \item \textbf{$L^p$ Comparisons} - For $1 \leq r \leq s \leq t \leq \infty$, if a function in $L^s$ can be written as the sum of functions in $L^r$ and $L^t$.  $$L^s \subset L^r + L^t.$$
-        \item \textbf{$L^p$ Comparison for Finite Spaces} - For finite measure spaces, a function in $L^q$ is also in $L^p$ for all $q > p$.  $$L^q \subset L^p.$$
-        \item \textbf{Approximation of $L^p$ ($p<\infty$) by Simple Functions} - The set of Simple Functions are dense in $L^p$.
-        \item \textbf{Approximation of $L^p$ ($p<\infty$) by Continuous Functions} - For bounded measure spaces, the set of continuous functions is dense in $L^p$.
-        \item \textbf{Approximation of $L^p_{\text{loc}}$ by Smooth Functions} - For a function $f$ in $L^p_{\text{loc}}$, its mollified functions:
-        \begin{enumerate}
-            \item are infinitely differentiable,
-            \item converge pointwise to $f$,
-            \item converge uniformly to $f$ on compact subsets of the space (given $f$ is continuous), and
-            \item converge to $f$ in $L^p_{\text{loc}}$.
-        \end{enumerate}
+        \item
+            Convexity is a thing.  $$x^\lambda \leq (1 - \lambda) + \lambda x \qquad \forall \lambda \in (0,1).$$ $$a^\lambda b^{1-\lambda} \leq \lambda a + (1 - \lambda)b \qquad \forall \lambda \in (0,1), \qquad \forall a,b \geq 0.$$
+        \item
+            \textbf{H\"{o}lder's Inequality} - For conjugate exponents $p$ and $q$, the $1$-norm of a product of $L^p$ and $L^q$ functions is finite, and the $1$-norm of the product is less than or equal to the product of the norms of the original functions.  $$\norm{fg}_1 \leq \norm{f}_p\norm{g}_q$$.
+        \item
+            \textbf{Interpolation Inequality} - For $1 \leq r \leq s \leq t \leq \infty$, if $u$ is in $L^r$ and $L^t$, then $u$ is in $L^s$ and the $s$-norm is less than of equal to the product of the $r$- and $t$-norms raised to the appropriate power. $$\norm{u}_s \leq \norm{u}_r^a \norm{u}_t^{1-a}\qquad \text{where } \frac{1}{s} = \frac{a}{r} + \frac{1-a}{t}.$$ $$L^r \cap L^t \subset L^s.$$
+        \item
+            \textbf{Minkowski's Inequality} - For functions in $L^p$, the norm of their sum is less than or equal to the sum of their norms. $$\norm{f + g}_p \leq \norm{f}_p + \norm{g}_p.$$
+        \item
+            $L^p$ is a normed linear space.
+        \item
+            $L^p$ is a Banach Space (a complete (Cauchy sequences converge) normed linear space).  Steps of the proof:
+            \begin{enumerate}
+                \item
+                    Construct the Cauchy sequence.
+                \item
+                    Construct a monotone sequence from the Cauchy sequence.
+                \item
+                    Use Mikowski's Inequality and Triangle Inequality to  show the sequence is uniformly bounded.
+                \item
+                    Show pointwise convergence of Cauchy sequence using Triangle Inequality.
+                \item
+                    Use dominated Convergence Theorem to show norm convergence of Cauchy sequence.
+            \end{enumerate}
+        \item
+            \textbf{Pointwise convergence implies a double implication} - If a sequence of functions converge pointwise, then their norms converge if and only if they converge in norm. $$f_k \rightarrow f \text{ pointwise}\ \ \implies\ \ \Bigg[\norm{f_k - f}_p \rightarrow 0\ \ \iff\ \ \norm{f_k}_p \rightarrow \norm{f}_p\Bigg].$$
+        \item
+            \textbf{$L^p$ Comparisons} - For $1 \leq r \leq s \leq t \leq \infty$, if a function in $L^s$ can be written as the sum of functions in $L^r$ and $L^t$.  $$L^s \subset L^r + L^t.$$
+        \item
+            \textbf{$L^p$ Comparison for Finite Spaces} - For finite measure spaces, a function in $L^q$ is also in $L^p$ for all $q > p$.  $$L^q \subset L^p.$$
+        \item
+            \textbf{Approximation of $L^p$ ($p<\infty$) by Simple Functions} - The set of Simple Functions are dense in $L^p$.
+        \item
+            \textbf{Approximation of $L^p$ ($p<\infty$) by Continuous Functions} - For bounded measure spaces, the set of continuous functions is dense in $L^p$.
+        \item
+            \textbf{Approximation of $L^p_{\text{loc}}$ by Smooth Functions} - For a function $f$ in $L^p_{\text{loc}}$, its mollified functions:
+            \begin{enumerate}
+                \item
+                    are infinitely differentiable,
+                \item
+                    converge pointwise to $f$,
+                \item
+                    converge uniformly to $f$ on compact subsets of the space (given $f$ is continuous), and
+                \item
+                    converge to $f$ in $L^p_{\text{loc}}$.
+            \end{enumerate}
     \end{enumerate}
 
     \subsection{Convolutions and (in general) Integral Operators}
     \begin{enumerate}
-        \item \textbf{Boundedness of Integral Operators} - An integral operator has bounded norm (and is hence continuous) if both of the absolute iterated integrals of its kernel are bounded (say by $C_1$ and $C_2$). $$\norm{K}_{\mathcal{B}(L^p(\mathbb{R}^n))} \leq C_1^\frac{1}{p}C_2^\frac{1}{q}.$$
-        \item \textbf{Cauchy-Young Inequality} - If $p$ and $q$ are conjugate exponents, then for all nonnegative $a$ and $b$, $$ab \leq \frac{a^p}{p} + \frac{b^q}{q}.$$
-        \begin{enumerate}
-            \item \textbf{Cauchy-Young Inequality with $\delta$} - If $p$ and $q$ are conjugate exponents, the for all nonnegative $a$ and $b$, $$ab \leq \delta a^p + C_\delta b^q, \qquad \delta > 0, \qquad C_\delta = \qty(\delta p)^{-\frac{q}{p}}q^{-1}.$$
-        \end{enumerate}
-        \item \textbf{Simple Version of Young's Inequality} - For $L^1$ function $k$ and $L^p$ function $f$, the $p$-norm of their convolution is less than or equal to the product of their respective norms.  $$\norm{k * f}_p \leq \norm{k}_1 \norm{f}_p.$$
-        \item \textbf{(More general) Young's Inequality for Convolution} - For $L^p$ function $k$ and $L^q$ function $f$, the $r$-norm of their convolution is bounded by the product of their respective norms, given $1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q}$.  $$\norm{k * f}_r \leq \norm{k}_p\norm{f}_q, \qquad 1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q}.$$
+        \item
+            \textbf{Boundedness of Integral Operators} - An integral operator has bounded norm (and is hence continuous) if both of the absolute iterated integrals of its kernel are bounded (say by $C_1$ and $C_2$). $$\norm{K}_{\mathcal{B}(L^p(\Rl^n))} \leq C_1^\frac{1}{p}C_2^\frac{1}{q}.$$
+        \item
+            \textbf{Cauchy-Young Inequality} - If $p$ and $q$ are conjugate exponents, then for all nonnegative $a$ and $b$, $$ab \leq \frac{a^p}{p} + \frac{b^q}{q}.$$
+            \begin{enumerate}
+                \item
+                    \textbf{Cauchy-Young Inequality with $\delta$} - If $p$ and $q$ are conjugate exponents, the for all nonnegative $a$ and $b$, $$ab \leq \delta a^p + C_\delta b^q, \qquad \delta > 0, \qquad C_\delta = \qty(\delta p)^{-\frac{q}{p}}q^{-1}.$$
+            \end{enumerate}
+        \item
+            \textbf{Simple Version of Young's Inequality} - For $L^1$ function $k$ and $L^p$ function $f$, the $p$-norm of their convolution is less than or equal to the product of their respective norms.  $$\norm{k * f}_p \leq \norm{k}_1 \norm{f}_p.$$
+        \item
+            \textbf{(More general) Young's Inequality for Convolution} - For $L^p$ function $k$ and $L^q$ function $f$, the $r$-norm of their convolution is bounded by the product of their respective norms, given $1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q}$.  $$\norm{k * f}_r \leq \norm{k}_p\norm{f}_q, \qquad 1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q}.$$
     \end{enumerate}
 
     \subsection{The Dual Space and Weak Topology}
     \begin{enumerate}
-        \item \textbf{Norm of an Integral Operator is the Norm of its Kernel} - For conjugate exponents $p$ and $q$, integration of an $L^p$ function against an $L^q$ function is a continuous linear functional on $L^p$ and the operator norm is equal to the norm of the $L^q$ function.  $$F_g(f) = \int fg \qquad \text{and} \qquad \norm{F_g}_\text{op} = \norm{g}_q.$$
-        \item \textbf{Riesz Representation Theorem ($1 < p < \infty$)} - For conjugate exponents $p$ and $q$, every bounded (continuous) linear functional on $L^p$ can be represented as an integral operator whose kernel is in $L^q$.  $$\phi \in (L^p)^*\ \ \implies\ \ \exists g \in L^q\ \text{ such that }\ \phi(f) = \int f g\ \ \forall f \in L^p.$$
-        \item \textbf{Reflexivity of $L^p$ ($1 < p < \infty$)} - The dual space of the dual space of $L^p$ is isomorphic to $L^p$.
-        \item \textbf{Radon-Nikodym Theorem} - If $\mu$ and $\nu$ are two finite measures on a measure space where $\nu$ is absolutely continuous with respect to $\mu$, then there exists an $L^1$ function $h$ to change the measure of integration as follows: $$\int F \dd\nu = \int F h \dd\mu \qquad \text{for every positive measurable function } F.$$
-        \item \textbf{Converse to H\"{o}lder's Inequality} - For finite measure spaces, if a product of a measurable function and any simple function is $L^1$, and if the supremum of the $L^1$-norm of the product (for simple functions of $L^p$-norm $1$) is finite, then the measurable function is in $L^q$ and its $L^q$-norm is equal to that supremum.  $$M(g) = \sup_{\norm{f}_p = 1} \left\{\abs{\int_\Omega fg \dd\mu}\ :\ f \text{ is a simple function}\right\} < \infty\ \ \implies\ \ g \in L^q(\Omega)\ \ \text{and}\ \ \norm{g}_q = M(g).$$
-        \item \textbf{Alaoglu's Lemma} - The closed unit ball in the dual of a Banach space is compact in the weak-$^*$ topology.
-        \item \textbf{Weak Compactness for $L^p(\Omega)$ for $1 < p < \infty$} - Every bounded sequence in $L^p$ has a weakly convergent subsequence.
-        \item \textbf{Weak-$^*$ compactness for $L^\infty$} - Every bounded sequence in $L^\infty$ has a weak$^*$ convergent subsequence.
-        \item \textbf{Convergence implies weak convergence} - Convergent sequences in $L^p$ are weakly convergent.
-        \item \textbf{Weak Limits have Bounded Norms} - The $L^p$ norm of a weak limit is bounded by the lim~inf of the $L^p$ norms of its sequence.
-        \item \textbf{Weakly convergent Sequences are bounded} - Weakly convergent $L^p$ sequences have bounded $L^p$ norms.
-        \item \textbf{Egoroff's Theorem} - For pointwise convergent sequences on finite domains, there exist arbitrarily small (positive measure) subsets such that the sequence converges uniformly on its complement. $$\forall \E < 0,\ \exists E \subset \Omega\ \text{with}\ \abs{E} < \E\ \text{such that}\ f_k \rightarrow f\ \text{uniformly on}\ \Omega\setminus E.$$
-        \item \textbf{Theorem 1.67} - Almost everywhere convergence of a bounded (in $L^p$) sequence in a bounded domain implies weak convergence for $1 < p < \infty$. $$\Omega \subset \mathbb{R}^n\ \text{bounded},\ \ \ \ \sup_{k}\norm{f_k}_p \leq M < \infty,\ \ \ \text{and}\ \ \ f_k \rightarrow f\ \text{ a.e.}\ \ \implies\ \ f_k \rightharpoonup f.$$
-        \item \textbf{Weak and Strong Convergence Imply Strong Integral Convergence} - If $u_k \rightharpoonup u$ and $v_k \rightarrow v$ in $L^p(\Omega)$, then
-        \begin{align*}
-            \int_\Omega u_kv_k \dd x \rightarrow \int_\Omega uv \dd x
-        \end{align*}
-        \item \textbf{Weak Convergence Sometimes Implies Strong Convergence} - Suppose $u_k \rightharpoonup u$ in $L^p(\Omega)$.  If $\norm{u}_p = \lim\norm{u_k}_p$, the $u_k \rightarrow u$ in $L^p(\Omega)$.
+        \item
+            \textbf{Norm of an Integral Operator is the Norm of its Kernel} - For conjugate exponents $p$ and $q$, integration of an $L^p$ function against an $L^q$ function is a continuous linear functional on $L^p$ and the operator norm is equal to the norm of the $L^q$ function.  $$F_g(f) = \int fg \qquad \text{and} \qquad \norm{F_g}_\text{op} = \norm{g}_q.$$
+        \item
+            \textbf{Riesz Representation Theorem ($1 < p < \infty$)} - For conjugate exponents $p$ and $q$, every bounded (continuous) linear functional on $L^p$ can be represented as an integral operator whose kernel is in $L^q$.  $$\phi \in (L^p)^*\ \ \implies\ \ \exists g \in L^q\ \text{ such that }\ \phi(f) = \int f g\ \ \forall f \in L^p.$$
+        \item
+            \textbf{Reflexivity of $L^p$ ($1 < p < \infty$)} - The dual space of the dual space of $L^p$ is isomorphic to $L^p$.
+        \item
+            \textbf{Radon-Nikodym Theorem} - If $\mu$ and $\nu$ are two finite measures on a measure space where $\nu$ is absolutely continuous with respect to $\mu$, then there exists an $L^1$ function $h$ to change the measure of integration as follows: $$\int F \dd\nu = \int F h \dd\mu \qquad \text{for every positive measurable function } F.$$
+        \item
+            \textbf{Converse to H\"{o}lder's Inequality} - For finite measure spaces, if a product of a measurable function and any simple function is $L^1$, and if the supremum of the $L^1$-norm of the product (for simple functions of $L^p$-norm $1$) is finite, then the measurable function is in $L^q$ and its $L^q$-norm is equal to that supremum.  $$M(g) = \sup_{\norm{f}_p = 1} \left\{\abs{\int_\Omega fg \dd\mu}\ :\ f \text{ is a simple function}\right\} < \infty\ \ \implies\ \ g \in L^q(\Omega)\ \ \text{and}\ \ \norm{g}_q = M(g).$$
+        \item
+            \textbf{Alaoglu's Lemma} - The closed unit ball in the dual of a Banach space is compact in the weak-$^*$ topology.
+        \item
+            \textbf{Weak Compactness for $L^p(\Omega)$ for $1 < p < \infty$} - Every bounded sequence in $L^p$ has a weakly convergent subsequence.
+        \item
+            \textbf{Weak-$^*$ compactness for $L^\infty$} - Every bounded sequence in $L^\infty$ has a weak$^*$ convergent subsequence.
+        \item
+            \textbf{Convergence implies weak convergence} - Convergent sequences in $L^p$ are weakly convergent.
+        \item
+            \textbf{Weak Limits have Bounded Norms} - The $L^p$ norm of a weak limit is bounded by the lim~inf of the $L^p$ norms of its sequence.
+        \item
+            \textbf{Weakly convergent Sequences are bounded} - Weakly convergent $L^p$ sequences have bounded $L^p$ norms.
+        \item
+            \textbf{Egoroff's Theorem} - For pointwise convergent sequences on finite domains, there exist arbitrarily small (positive measure) subsets such that the sequence converges uniformly on its complement. $$\forall \E < 0,\ \exists E \subset \Omega\ \text{with}\ \abs{E} < \E\ \text{such that}\ f_k \rightarrow f\ \text{uniformly on}\ \Omega\setminus E.$$
+        \item
+            \textbf{Theorem 1.67} - Almost everywhere convergence of a bounded (in $L^p$) sequence in a bounded domain implies weak convergence for $1 < p < \infty$. $$\Omega \subset \Rl^n\ \text{bounded},\ \ \ \ \sup_{k}\norm{f_k}_p \leq M < \infty,\ \ \ \text{and}\ \ \ f_k \rightarrow f\ \text{ a.e.}\ \ \implies\ \ f_k \rightharpoonup f.$$
+        \item
+            \textbf{Weak and Strong Convergence Imply Strong Integral Convergence} - If $u_k \rightharpoonup u$ and $v_k \rightarrow v$ in $L^p(\Omega)$, then
+            \begin{align*}
+                \int_\Omega u_kv_k \dd x \rightarrow \int_\Omega uv \dd x
+            \end{align*}
+        \item
+            \textbf{Weak Convergence Sometimes Implies Strong Convergence} - Suppose $u_k \rightharpoonup u$ in $L^p(\Omega)$.  If $\norm{u}_p = \lim\norm{u_k}_p$, the $u_k \rightarrow u$ in $L^p(\Omega)$.
     \end{enumerate}
 
     \section{Sobolev Spaces and the Fourier Transform}
     \subsection{Sobolev Spaces $W^{k,p}$ for Integers $k \geq 0$}
     \begin{enumerate}
-        \item \textbf{Divergence Theorem} - Let $w\ :\ \overline{\Omega} \subset \mathbb{R}^n \rightarrow \mathbb{R}^n$.  If $\partial\Omega$ is the graph of a Lipschitz function, then
-        \begin{align*}
-            \int_\Omega \div w \dd x = \int_{\partial \Omega} w \cdot N \dd S
-        \end{align*}
-        where $N$ is the outward-facing normal vector.
-        \item \textbf{Multi-Dimensional Version of Integration by Parts} - Suppose $g,h\ :\ \Omega \rightarrow \mathbb{R}$.  Then
-        \begin{align*}
-            \int_\Omega g h_{x_i} \dd x = \int_\partial gh N^i \dd S - \int_\Omega g_{x_i}h \dd x
-        \end{align*}
-        where $g_{x_i}$ and $h_{x_i}$ are the $i$\textsuperscript{th} partial derivatives of $g$ and $h$, respectively, and $N^i$ is the $i$\textsuperscript{th} component of the outward-facing normal vector.
-        \item \textbf{Green's First Identity} -  Suppose $u \in \mathcal{C}^2(\overline{\Omega})$ and $v \in \mathcal{C}^1(\overline{\Omega})$.  Then
-        \begin{align*}
-            \int_\Omega \grad v \cdot \grad u \dd x = \int_\Omega v \laplacian u \dd x = \int_\Omega \div\qty(v\grad u) \dd x = \int_{\partial\Omega} v \frac{\partial u}{\partial N}\dd X
-        \end{align*}
+        \item
+            \textbf{Divergence Theorem} - Let $w\ :\ \overline{\Omega} \subset \Rl^n \rightarrow \Rl^n$.  If $\partial\Omega$ is the graph of a Lipschitz function, then
+            \begin{align*}
+                \int_\Omega \div w \dd x = \int_{\partial \Omega} w \cdot N \dd S
+            \end{align*}
+            where $N$ is the outward-facing normal vector.
+        \item
+            \textbf{Multi-Dimensional Version of Integration by Parts} - Suppose $g,h\ :\ \Omega \rightarrow \Rl$.  Then
+            \begin{align*}
+                \int_\Omega g h_{x_i} \dd x = \int_{\partial\Omega} gh N^i \dd S - \int_\Omega g_{x_i}h \dd x
+            \end{align*}
+            where $g_{x_i}$ and $h_{x_i}$ are the $i$\textsuperscript{th} partial derivatives of $g$ and $h$, respectively, and $N^i$ is the $i$\textsuperscript{th} component of the outward-facing normal vector.
+        \item
+            \textbf{Green's First Identity} - Suppose $u \in \mathcal{C}^2(\overline{\Omega})$ and $v \in \mathcal{C}^1(\overline{\Omega})$.  Then
+            \begin{align*}
+                \int_\Omega \grad v \cdot \grad u \dd x = \int_\Omega v \laplacian u \dd x = \int_\Omega \div\qty(v\grad u) \dd x = \int_{\partial\Omega} v \frac{\partial u}{\partial N}\dd X.
+            \end{align*}
+            where $\laplacian = \dfrac{\partial^2}{\partial x_i^2} + \dots + \dfrac{\partial^2}{\partial x_n^2}$.
+        \item
+            \textbf{Green's Second Identity} - Suppose both $u$ and $v$ are in $\mathcal{C}^2(\overline{\Omega})$.  Then
+            \begin{align*}
+                \int_\Omega (v \laplacian u - u \laplacian v) \dd x = \int_{\partial \Omega} \qty[v \frac{\partial u}{\partial N} - u \frac{\partial v}{\partial N}]\dd S.
+            \end{align*}
+        \item
+            \textbf{Liebnitz Rule (Product Rule)} - Suppose $u \in W^{k,p}$ and $\phi$ is a test function.  Then $\phi u \in W^{k,p}$ and
+            \begin{align*}
+                D^\alpha(\phi u) = \sum_{\abs{\beta} \leq \abs{\alpha}} \binom{\alpha}{\beta}D^\alpha \phi D^{\alpha - \beta} u
+            \end{align*}
+        \item
+                \textbf{Sobolev Spaces are Banach Spaces} - $W^{k,p}$ is a Banach Space.
+        \item
+            \textbf{Sobolev Embedding in 2D} - Suppose $\phi$ is a test function.  Then it is absolutely bounded by a constant multiple of its norm in $W^{k,p}(\Rl^2)$.
+            \begin{align*}
+                \max_{x\in\Rl^2}\abs{u(x)} \leq C \norm{u}_{W^{k,p}(\Rl^2)}
+            \end{align*}
+        \item
+            \textbf{Local Approximation of Sobolev Functions by Smooth Functions} - For nonnegative $k$ and finite $p$, and for $u \in W^{k,p}$,
+            \begin{enumerate}
+                \item
+                    $u^\E = \eta_\E * u$ is infinitely continuous (not necessarily compactly supported) on $\Omega_\E$, and
+                \item
+                    $u^\E \rightarrow u$ in $W_\text{loc}^{k,p}$
+            \end{enumerate}
+        \item
+            \textbf{Global Approximaton of Sobolev Functions by Smooth Functions} - For open and bounded $\Omega$ and for finite $p$, infinitely smooth Sobolev functions are dense in Sobolev Space.
+            \begin{align*}
+                \mathcal{C}^\infty(\Omega) \cap W^{k,p}(\Omega) \qquad \text{is dense in} \qquad W^{k,p}(\Omega) \qquad \text{with respect to the $W^{k,p}$ norm.}
+            \end{align*}
+        \item
+            \textbf{Global Approximation of Sobolev Functions on the Closure of the Domain} - For smooth, bounded, open subsets of $\Rl^n$, Sobolev functions can be approximated by infinitely smooth functions on the closure of the domain.
+            \begin{align*}
+                \mathcal{C}^\infty(\overline{\Omega}) \qquad \text{is dense in} \qquad W^{k,p}(\Omega) \qquad \text{with respect to the $W^{k,p}$ norm.}
+            \end{align*}
+        \item
+            \textbf{Morrey's Inequality} - Sobolev functions on a ball have bounded differences.  Denote $B_r \subset \Rl^n$ as a ball of radius $r$ and let $n < p \leq \infty$.
+            \begin{align*}
+                \abs{u(x) - u(y)} \leq C \abs{x - y}^{1 - \frac{n}{p}}\norm{D u}_{L^p(B_r)}
+            \end{align*}
+        \item
+            \textbf{Sobolev Embedding for $k = 1$} - The $\mathcal{C}^{0,1 - \frac{n}{p}}(\Rl^n)$ norm (H\"{o}lder Space norm) of a Sobolev function is bounded by a constant multiple (dependent on $p$ and $n$) of the $W^{1,p}(\Rl^n)$ norm.
+            \begin{align*}
+                \norm{u}_{\mathcal{C}^{0, 1 - \frac{n}{p}}(\Rl^n)} \leq C\norm{u}_{W^{1,p}(\Rl^n)}
+            \end{align*}
+        \item
+            \textbf{Sobolev Embedding for $kp > n$} - The H\"{o}lder Space norm of a Sobolev function is bounded by a constant multiple (dependent on $k$, $p$, and $n$) of the Sobolev norm.
+            \begin{align*}
+                \norm{u}_{\mathcal{C}^{k - \qty[\frac{n}{p}] - 1, \gamma}(\Rl^n)} \leq C \norm{u}_{W^{k,p}(\Rl^n)} \qquad \text{where} \qquad \gamma = \begin{cases}
+                    \qty[\dfrac{n}{p}] + 1 - \dfrac{n}{p} & \text{ if } \dfrac{n}{p} \not\in \mathbb{N},\\[0.4cm]
+                    \text{any } \alpha \in \Rl \cap (0,1) & \text{ if } \dfrac{n}{p} \in \mathbb{N}.
+                \end{cases}
+            \end{align*}
+        \item 
+            \textbf{Almost-Everywhere Differentiability} - For $n < p \leq \infty$, local Sobolev functions are almost-everywhere differentiable and its gradient and weak gradient agree almost everywhere.
+        \item
+            \textbf{Gagliardo-Nirenberg-Sobolev Inequality} - For $1 \leq p < n$, set $p^* = \dfrac{np}{n - p}$.  Then the $L^{p^*}$ norm of a Sobolev function is bounded by a constant multiple (dependent on $n$ and $p$) of the $L^p$ norm of its derivative.
+            \begin{align*}
+                \norm{u}_{L^{p^*}(\Rl^n)} \leq C\norm{Du}_{L^p(\Rl^n)}.
+            \end{align*}
     \end{enumerate}
 \end{document}
