Added a bunch of notes.. not to every section and certainly not to every box, but some useful stuff we talked about

--- a/facts/convolutions_and_integral_operators.tex
+++ b/facts/convolutions_and_integral_operators.tex
@@ -1,17 +1,32 @@
 \begin{longtable}{|*{3}{>{\centering\arraybackslash}p{0.475\textwidth}|}}
     \toprule
-        \textbf{$L^p$ Spaces} & \textbf{Examples} \\[6pt]
+        \textbf{Convolutions and Integral Operators} & \textbf{Notes} \\[6pt]
         \midrule
         \endhead
-            \textbf{Boundedness of Integral Operators} - An integral operator has bounded norm (and is hence continuous) if both of the absolute iterated integrals of its kernel are bounded (say by $C_1$ and $C_2$). \newline {$\!\begin{gathered} \norm{K}_{\mathcal{B}(L^p(\Rl^n))} \leq C_1^\frac{1}{p}C_2^\frac{1}{q} \end{gathered}$} & This is an example. \\[6pt] \hline
+            \textbf{Boundedness of Integral Operators} - An integral operator has bounded norm (and is hence continuous) if both of the absolute iterated integrals of its kernel are bounded (say by $C_1$ and $C_2$). \newline {$\!\begin{gathered} \norm{K}_{\mathcal{B}(L^p(\Rl^n))} \leq C_1^\frac{1}{p}C_2^\frac{1}{q} \end{gathered}$}
+            &
             
-            \textbf{Cauchy-Young Inequality} - If $p$ and $q$ are conjugate exponents, then for all nonnegative $a$ and $b$, \newline {$\!\begin{gathered}ab \leq \frac{a^p}{p} + \frac{b^q}{q} \end{gathered}$}\SP & This is an example. \\[6pt] \hline
+            \\[6pt] \hline
             
-            \textbf{Cauchy-Young Inequality with $\delta$} - If $p$ and $q$ are conjugate exponents, the for all nonnegative $a$ and $b$, \newline {$\!\begin{gathered}ab \leq \delta a^p + C_\delta b^q, \ \ \delta > 0, \ \ C_\delta = \qty(\delta p)^{-\frac{q}{p}}q^{-1} \end{gathered}$} \SP & This is an example. \\[6pt] \hline
+            \textbf{Cauchy-Young Inequality} - If $p$ and $q$ are conjugate exponents, then for all nonnegative $a$ and $b$, \newline {$\!\begin{gathered}ab \leq \frac{a^p}{p} + \frac{b^q}{q} \end{gathered}$}\SP
+            &
             
-            \textbf{Simple Version of Young's Inequality} - For $L^1$ function $k$ and $L^p$ function $f$, the $p$-norm of their convolution is less than or equal to the product of their respective norms. \newline {$\!\begin{gathered}\norm{k * f}_p \leq \norm{k}_1 \norm{f}_p \end{gathered}$} \SP & This is an example. \\[6pt] \hline
+            \\[6pt] \hline
             
-            \textbf{(More general) Young's Inequality for Convolution} - For $L^p$ function $k$ and $L^q$ function $f$, the $r$-norm of their convolution is bounded by the product of their respective norms, given $1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q}$. \newline {$\!\begin{gathered}\norm{k * f}_r \leq \norm{k}_p\norm{f}_q, \qquad 1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q} \end{gathered}$} & This is an example. \\[6pt] \hline
+            \textbf{Cauchy-Young Inequality with $\delta$} - If $p$ and $q$ are conjugate exponents, the for all nonnegative $a$ and $b$, \newline {$\!\begin{gathered}ab \leq \delta a^p + C_\delta b^q, \ \ \delta > 0, \ \ C_\delta = \qty(\delta p)^{-\frac{q}{p}}q^{-1} \end{gathered}$} \SP
+            &
+            
+            \\[6pt] \hline
+            
+            \textbf{Simple Version of Young's Inequality} - For $L^1$ function $k$ and $L^p$ function $f$, the $p$-norm of their convolution is less than or equal to the product of their respective norms. \newline {$\!\begin{gathered}\norm{k * f}_p \leq \norm{k}_1 \norm{f}_p \end{gathered}$} \SP
+            &
+            
+            \\[6pt] \hline
+            
+            \textbf{(More general) Young's Inequality for Convolution} - For $L^p$ function $k$ and $L^q$ function $f$, the $r$-norm of their convolution is bounded by the product of their respective norms, given $1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q}$. \newline {$\!\begin{gathered}\norm{k * f}_r \leq \norm{k}_p\norm{f}_q, \qquad 1 + \frac{1}{r} = \frac{1}{p} + \frac{1}{q} \end{gathered}$}
+            &
+            
+            \\[6pt] \hline
             
     \bottomrule
 \end{longtable}
