--- a/facts/examples_main.tex
+++ b/facts/examples_main.tex
@@ -12,7 +12,7 @@
 \newcommand{\E}{\varepsilon}
 
 \author{Sam Fleischer}
-\title{Functional Analysis Theorems, Examples, and Counter Exmaples}
+\title{Functional Analysis Facts and Notes}
 
 \begin{document}
 
