--- a/facts/integrals_over_product_spaces.tex
+++ b/facts/integrals_over_product_spaces.tex
@@ -1,10 +1,19 @@
 \begin{longtable}{|*{3}{>{\centering\arraybackslash}p{0.475\textwidth}|}}
     \toprule
-        \textbf{Integrals over Product Spaces} & \textbf{Examples} \\[6pt]
+        \textbf{Integrals over Product Spaces} & \textbf{Notes} \\[6pt]
         \midrule
         \endhead
-            \textbf{Fubini's Theorem} - If a function is integrable on a product space, then the integral over the product space is equal to both iterated integrals. & This is an example. \\[6pt] \hline
-            \textbf{Semi-converse of Fubini's Theorem} - If an iterated integral exists of the \emph{absolute value} of a function on a prodct space, then the integral of the product space is equal to both iterated integrals. & This is an example. \\[6pt] \hline
-            \textbf{Tonelli's Theorem} - If a function is non-negative and measurable on a product space, then the integral over the product space is equal to both iterated integrals. & This is an example. \\[6pt] \hline
+            \textbf{Fubini's Theorem} - If a function is integrable on a product space, then the integral over the product space is equal to both iterated integrals.
+            &
+            \\[6pt] \hline
+            
+            \textbf{Semi-converse of Fubini's Theorem} - If an iterated integral exists of the \emph{absolute value} of a function on a prodct space, then the integral of the product space is equal to both iterated integrals.
+            &
+            This is the most useful theorem regarding integrals over product spaces.  You only need a single iterated integral to get the other iterated integral and the integral over the product space.  Useful when finding norms of convolved functions since you always get a double integral.
+            \\[6pt] \hline
+            
+            \textbf{Tonelli's Theorem} - If a function is non-negative and measurable on a product space, then the integral over the product space is equal to both iterated integrals.
+            &
+            \\[6pt] \hline
     \bottomrule
 \end{longtable}
