--- a/facts/dual_space_weak_topology.tex
+++ b/facts/dual_space_weak_topology.tex
@@ -1,37 +1,89 @@
 \begin{longtable}{|*{3}{>{\centering\arraybackslash}p{0.475\textwidth}|}}
     \toprule
-        \textbf{$L^p$ Spaces} & \textbf{Examples} \\[6pt]
+        \textbf{The Dual Space and Weak Topology} & \textbf{Notes} \\[6pt]
         \midrule
         \endhead
-            \textbf{Norm of an Integral Operator is the Norm of its Kernel} - For conjugate exponents $p$ and $q$, integration of an $L^p$ function against an $L^q$ function is a continuous linear functional on $L^p$ and the operator norm is equal to the norm of the $L^q$ function. \newline {$\!\begin{gathered} F_g(f) = \int fg \qquad \text{and} \qquad \norm{F_g}_\text{op} = \norm{g}_q \end{gathered}$} & This is an example. \\[6pt] \hline
+            \textbf{Norm of an Integral Operator is the Norm of its Kernel} - For conjugate exponents $p$ and $q$, integration of an $L^p$ function against an $L^q$ function is a continuous linear functional on $L^p$ and the operator norm is equal to the norm of the $L^q$ function. \newline {$\!\begin{gathered} F_g(f) = \int fg \qquad \text{and} \qquad \norm{F_g}_\text{op} = \norm{g}_q \end{gathered}$}
+            &
             
-            \textbf{Riesz Representation Theorem ($1 < p < \infty$)} - For conjugate exponents $p$ and $q$, every bounded (continuous) linear functional on $L^p$ can be represented as an integral operator whose kernel is in $L^q$. \newline {$\!\begin{gathered}\phi \in (L^p)^*\ \ \implies\ \ \exists g \in L^q\end{gathered}$} \newline such that \newline {$\!\begin{gathered} \phi(f) = \int f g\ \ \forall f \in L^p \end{gathered}$}\SP & This is an example. \\[6pt] \hline
+            \\[6pt] \hline
             
-            \textbf{Reflexivity of $L^p$ ($1 < p < \infty$)} - The dual space of the dual space of $L^p$ is isomorphic to $L^p$. & This is an example. \\[6pt] \hline
+            \textbf{Riesz Representation Theorem ($1 < p < \infty$)} - For conjugate exponents $p$ and $q$, every bounded (continuous) linear functional on $L^p$ can be represented as an integral operator whose kernel is in $L^q$. \newline {$\!\begin{gathered}\phi \in (L^p)^*\ \ \implies\ \ \exists g \in L^q\end{gathered}$} \newline such that \newline {$\!\begin{gathered} \phi(f) = \int f g\ \ \forall f \in L^p \end{gathered}$}\SP
+            &
             
-            \textbf{Radon-Nikodym Theorem} - If $\mu$ and $\nu$ are two finite measures on a measure space where $\nu$ is absolutely continuous with respect to $\mu$, then there exists an $L^1$ function $h$ to change the measure of integration as follows: \newline {$\!\begin{gathered}\int F \dd\nu = \int F h \dd\mu  \end{gathered}$} \newline for every positive measurable function $F$. \SP & This is an example. \\[6pt] \hline
+            \\[6pt] \hline
             
-            \textbf{Converse to H\"{o}lder's Inequality} - For finite measure spaces, if a product of a measurable function and any simple function is $L^1$, and if the supremum of the $L^1$-norm of the product (for simple functions of $L^p$-norm $1$) is finite, then the measurable function is in $L^q$ and its $L^q$-norm is equal to that supremum. \newline {$\!\begin{gathered}M(g) = \sup_{\norm{f}_p = 1} \left\{\abs{\int_\Omega fg \dd\mu} : f \text{ is simple}\right\} < \infty \\ \implies \\ g \in L^q(\Omega)\ \ \text{and}\ \ \norm{g}_q = M(g) \end{gathered}$} & This is an example. \\[6pt] \hline
+            \textbf{Reflexivity of $L^p$ ($1 < p < \infty$)} - The dual space of the dual space of $L^p$ is isomorphic to $L^p$.
+            &
+            $L^p \cong ((L^p)^*)^*$ for $1 < p < \infty$.  That is, $L^p$ is reflexive.  On the other hand, $(L^1)^* \cong L^\infty$ but $(L^\infty)^* \not\cong L^1$.  In fact, $(L^\infty)^* \cong A \supset L^1$.
+            \\[6pt] \hline
             
-            \textbf{Alaoglu's Lemma} - The closed unit ball in the dual of a Banach space is compact in the weak-$^*$ topology. & This is an example. \\[6pt] \hline
+            \textbf{Radon-Nikodym Theorem} - If $\mu$ and $\nu$ are two finite measures on a measure space where $\nu$ is absolutely continuous with respect to $\mu$, then there exists an $L^1$ function $h$ to change the measure of integration as follows: \newline {$\!\begin{gathered}\int F \dd\nu = \int F h \dd\mu  \end{gathered}$} \newline for every positive measurable function $F$. \SP
+            &
+            Is this literally just $u$-substitution?
+            \\[6pt] \hline
             
-            \textbf{Weak Compactness for $L^p(\Omega)$ for $1 < p < \infty$} - Every bounded sequence in $L^p$ has a weakly convergent subsequence. & This is an example. \\[6pt] \hline
+            \textbf{Converse to H\"{o}lder's Inequality} - For finite measure spaces, if a product of a measurable function and any simple function is $L^1$, and if the supremum of the $L^1$-norm of the product (for simple functions of $L^p$-norm $1$) is finite, then the measurable function is in $L^q$ and its $L^q$-norm is equal to that supremum. \newline {$\!\begin{gathered}M(g) = \sup_{\substack{\norm{f}_p = 1 \\ f \text{ is simple }}} \left\{\abs{\int_\Omega fg \dd\mu}\right\} < \infty \\ \implies \\ g \in L^q(\Omega)\ \ \text{and}\ \ \norm{g}_q = M(g) \end{gathered}$}
+            &
+            Ok lets try this again.  H\"{o}lder's inequality states \newline
+            {$\!\begin{gathered}
+                f \in L^p,\ g \in L^{p^*}\ \implies\ fg \in L^1.
+            \end{gathered}$}
+            \newline\newline The converse states that if $fg \in L^1$ for every $f \in L^p$ such that $\norm{f}_p = 1$ and $f$ is simple, then $g \in L^{p^*}$.  In addition, \newline
+            {$\!\begin{gathered}
+                \norm{g}_{p^*} = \sup_{\substack{\norm{f}_p = 1 \\ f \text{ is simple }}} \left\{\abs{\int_\Omega fg \dd\mu}\right\}
+            \end{gathered}$}
+            \\[6pt] \hline
             
-            \textbf{Weak-$^*$ compactness for $L^\infty$} - Every bounded sequence in $L^\infty$ has a weak$^*$ convergent subsequence. & This is an example. \\[6pt] \hline
+            \textbf{Alaoglu's Lemma} - The closed unit ball in the dual of a Banach space is compact in the weak-$^*$ topology.
+            &
+            Another way to say this is that the closed unit ball is compact in the weak topology.  These are equivalent for reflexive spaces (in particular $L^p$ for $1 < p < \infty$).
+            \\[6pt] \hline
             
-            \textbf{Convergence implies weak convergence} - Convergent sequences in $L^p$ are weakly convergent. & This is an example. \\[6pt] \hline
+            \textbf{Weak Compactness for $L^p(\Omega)$ for $1 < p < \infty$} - Every bounded sequence in $L^p$ has a weakly convergent subsequence.
+            &
             
-            \textbf{Weak Limits have Bounded Norms} - The $L^p$ norm of a weak limit is bounded by the lim~inf of the $L^p$ norms of its sequence. & This is an example. \\[6pt] \hline
+            \\[6pt] \hline
             
-            \textbf{Weakly convergent Sequences are bounded} - Weakly convergent $L^p$ sequences have bounded $L^p$ norms. & This is an example. \\[6pt] \hline
+            \textbf{Weak-$^*$ compactness for $L^\infty$} - Every bounded sequence in $L^\infty$ has a weak$^*$ convergent subsequence.
+            &
             
-            \textbf{Egoroff's Theorem} - For pointwise convergent sequences on finite domains, there exist arbitrarily small (positive measure) subsets such that the sequence converges uniformly on its complement. \newline {$\!\begin{gathered}\forall \E < 0,\ \exists E \subset \Omega\ \text{with}\ \abs{E} < \E\end{gathered}$} \newline such that \newline {$\!\begin{gathered} f_k \rightarrow f\ \text{uniformly on}\ \Omega\setminus E \end{gathered}$} & This is an example. \\[6pt] \hline
+            \\[6pt] \hline
             
-            Almost everywhere convergence of a bounded (in $L^p$) sequence in a bounded domain implies weak convergence for $1 < p < \infty$. \newline {$\!\begin{gathered}\left\{\begin{array}{l} \Omega \subset \Rl^n\ \text{bounded}, \\ \sup_{k}\norm{f_k}_p \leq M < \infty, \text{and} \\ f_k \rightarrow f\ \text{ a.e.} \end{array}\right\} \implies f_k \rightharpoonup f \end{gathered}$} & This is an example. \\[6pt] \hline
+            \textbf{Convergence implies weak convergence} - Convergent sequences in $L^p$ are weakly convergent.
+            &
             
-            \textbf{Weak and Strong Convergence Imply Strong Integral Convergence} - If $u_k \rightharpoonup u$ and $v_k \rightarrow v$ in $L^p(\Omega)$, then \newline {$\!\begin{gathered}\int_\Omega u_kv_k \dd x \rightarrow \int_\Omega uv \dd x \end{gathered}$} & This is an example. \\[6pt] \hline
+            \\[6pt] \hline
             
-            \textbf{Weak Convergence Sometimes Implies Strong Convergence} - Suppose $u_k \rightharpoonup u$ in $L^p(\Omega)$.  If $\norm{u}_p = \lim\norm{u_k}_p$, the $u_k \rightarrow u$ in $L^p(\Omega)$. & This is an example. \\[6pt] \hline
+            \textbf{Weak Limits have Bounded Norms} - The $L^p$ norm of a weak limit is bounded by the lim~inf of the $L^p$ norms of its sequence.
+            &
+            
+            \\[6pt] \hline
+            
+            \textbf{Weakly convergent Sequences are bounded} - Weakly convergent $L^p$ sequences have bounded $L^p$ norms.
+            &
+            
+            \\[6pt] \hline
+            
+            \textbf{Egoroff's Theorem} - For pointwise convergent sequences on finite domains, there exist arbitrarily small (positive measure) subsets such that the sequence converges uniformly on its complement. \newline {$\!\begin{gathered}\forall \E < 0,\ \exists E \subset \Omega\ \text{with}\ \abs{E} < \E\end{gathered}$} \newline such that \newline {$\!\begin{gathered} f_k \rightarrow f\ \text{uniformly on}\ \Omega\setminus E \end{gathered}$}
+            &
+            
+            \\[6pt] \hline
+            
+            Almost everywhere convergence of a bounded (in $L^p$) sequence in a bounded domain implies weak convergence for $1 < p < \infty$. \newline {$\!\begin{gathered}\left\{\begin{array}{l} \Omega \subset \Rl^n\ \text{bounded}, \\ \sup_{k}\norm{f_k}_p \leq M < \infty, \text{and} \\ f_k \rightarrow f\ \text{ a.e.} \end{array}\right\} \implies f_k \rightharpoonup f \end{gathered}$}
+            &
+            
+            \\[6pt] \hline
+            
+            \textbf{Weak and Strong Convergence Imply Strong Integral Convergence} - If $u_k \rightharpoonup u$ and $v_k \rightarrow v$ in $L^p(\Omega)$, then \newline {$\!\begin{gathered}\int_\Omega u_kv_k \dd x \rightarrow \int_\Omega uv \dd x \end{gathered}$}
+            &
+            
+            \\[6pt] \hline
+            
+            \textbf{Weak Convergence Sometimes Implies Strong Convergence} - Suppose $u_k \rightharpoonup u$ in $L^p(\Omega)$.  If $\norm{u}_p = \lim\norm{u_k}_p$, the $u_k \rightarrow u$ in $L^p(\Omega)$.
+            &
+            
+            \\[6pt] \hline
             
     \bottomrule
 \end{longtable}
